<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">2048</string>
    <string name="game_start">게임 시작</string>
    <string name="score">점수</string>
    <string name="best_score">최고 점수</string>
    <string name="undo">되돌리기</string>
    <string name="shuffle">섞기</string>
    <string name="game_over">게임 오버</string>
    <string name="you_win">승리!</string>
    <string name="new_game">새 게임</string>
    <string name="continue_game">계속하기</string>
    <string name="difficulty">난이도</string>
</resources>
